--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,14 @@
 {
+    "extends": ["eslint:recommended"],
     "env": {
-        "node": true
+        "es6": true,
+        "browser": true
     },
     "parserOptions": {
         "sourceType": "module"
+    },
+    "rules": {
+        "semi": [2, "always"],
+        "no-console": 0
     }
 }
