--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "description": "Playing around with hamsters.js",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "start": "node server/app.js",
+    "heroku-postbuild": "npm install --dev && webpack"
+  },
   "keywords": [],
   "author": "Jonathan Taylor",
   "license": "MIT",
